crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__function__tests__lambda_pos_args.snap
---
source: crates/sith_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..17,
                value: Lambda(
                    LambdaExpr {
                        range: 0..17,
                        parameters: Some(
                            Parameters {
                                range: 7..14,
                                posonlyargs: [],
                                args: [
                                    ParameterWithDefault {
                                        range: 7..8,
                                        parameter: Parameter {
                                            range: 7..8,
                                            name: Identifier {
                                                id: "a",
                                                range: 7..8,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                    ParameterWithDefault {
                                        range: 10..11,
                                        parameter: Parameter {
                                            range: 10..11,
                                            name: Identifier {
                                                id: "b",
                                                range: 10..11,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                    ParameterWithDefault {
                                        range: 13..14,
                                        parameter: Parameter {
                                            range: 13..14,
                                            name: Identifier {
                                                id: "c",
                                                range: 13..14,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                ],
                                vararg: None,
                                kwonlyargs: [],
                                kwarg: None,
                            },
                        ),
                        body: NumberLiteral(
                            NumberLiteralExpr {
                                range: 16..17,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
